--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,14 @@ library {
   linkage = [Linkage.STATIC]
   source.from file("src/cpp")
   publicHeaders.from file("src/include")
+
+  binaries.configureEach {
+    if (toolChain instanceof Gcc || toolChain instanceof Clang) {
+      compileTask.get().compilerArgs = ["-std=c++17", "-lpthread", "-g"]
+    } else if (toolChain instanceof VisualCpp) {
+      compileTask.get().compilerArgs = ["/std:c++17"]
+    }
+  }
 }
 
 unitTest {
@@ -27,5 +35,10 @@ unitTest {
       linkTask.get().linkerArgs.add('-lpthread')
     }
 
+    if (toolChain instanceof Gcc || toolChain instanceof Clang) {
+      compileTask.get().compilerArgs = ["-std=c++17", "-lpthread", "-g"]
+    } else if (toolChain instanceof VisualCpp) {
+      compileTask.get().compilerArgs = ["/std:c++17"]
+    }
   }
 }
