--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,30 @@ import static org.apache.tools.ant.taskdefs.condition.Os.*
 
 plugins {
   id 'cpp-library'
+  id 'cpp-unit-test'
+}
+
+repositories {
+  maven {
+    url = 'https://gtest-gradle.sourceforge.io/maven'
+  }
 }
 
 library {
   linkage = [Linkage.STATIC]
   source.from file("src/cpp")
   publicHeaders.from file("src/include")
+}
+
+unitTest {
+  dependencies {
+    implementation 'com.google:gtest:1.8.1'
+  }
+
+  binaries.configureEach {
+    if (targetMachine.operatingSystemFamily.linux && toolChain instanceof Gcc) {
+      linkTask.get().linkerArgs.add('-lpthread')
+    }
+
+  }
 }
