--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,11 @@ plugins {
   id 'cpp-unit-test'
 }
 
-repositories {
-  maven {
-    url = 'https://gtest-gradle.sourceforge.io/maven'
-  }
-}
+// repositories {
+//   maven {
+//     url = 'https://gtest-gradle.sourceforge.io/maven'
+//   }
+// }
 
 library {
   linkage = [Linkage.STATIC]
@@ -26,9 +26,9 @@ library {
 }
 
 unitTest {
-  dependencies {
-    implementation 'com.google:gtest:1.8.1'
-  }
+  // dependencies {
+  //   implementation 'com.google:gtest:1.8.1'
+  // }
 
   binaries.configureEach {
     if (targetMachine.operatingSystemFamily.linux && toolChain instanceof Gcc) {
