--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,10 @@ plugins {
 // }
 
 library {
+  dependencies {
+    implementation project(':CommBus')
+  }
+
   linkage = [Linkage.STATIC]
   source.from file("src/cpp")
   publicHeaders.from file("src/include")
